--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -8,7 +8,7 @@
 
        {% for category in categories %}
        {%  if category.products.all %}
-    <li class="list-group-item"><a href="{% url 'list' category.slug  %}">{{ category.name }}</a></li>
+    <li class="list-group-item"><a href="">{{ category.name }}</a></li>
        {% endif %}
        {% endfor %}
 
