--- a/templates/base.html
+++ b/templates/base.html
@@ -34,15 +34,27 @@
                     {% endfor %}
                   <li><a href="{% url 'favorites' %}" class="nav-link px-2 text-white">Favorites</a></li>
                 </ul>
-    <!-- Start Search-->
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                  <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-                </form>
-    <!--the Seaech-->
+ <a href="{% url 'cart_detail' %}"><img style="width:30px; height:auto " src="{% static 'img/carts.png' %}"></a>
+                  <!--   Permission to create -->
+    {% if request.user.is_authenticated and request.user.is_superuser  %}
+    <a href="{% url 'create-product' %}"><img style="width: 30px; height: auto;" src="{% static 'img/plus-icon.jpg' %}"></a>
+    {% endif %}
+<!--    End permission to create -->
+   <!--   Search -->
+    <form class="d-flex" method="get" action="{% url 'search' %}">
+      <input name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+<!--    End Search-->
+
     <!--Start Login and Sing-up -->
                 <div class="text-end">
-                  <button type="button" class="btn btn-outline-light me-2">Login</button>
-                  <button type="button" class="btn btn-warning">Sign-up</button>
+                    {% if request.user.is_authenticated %}
+                                      <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-light me-2">Logout</button></a>
+{% else %}
+                  <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+                  <a href="{% url 'register' %}"><button type="button" class="btn btn-warning">Sign-up</button></a>
+                    {% endif %}
                 </div>
               </div>
     <!--     the Login and Sing-up-->
