--- a/shop/templates/shop/list.html
+++ b/shop/templates/shop/list.html
@@ -1,38 +1,26 @@
 {% extends 'base.html' %}
 
-<!--{%  block name %}-->
-<!--{{ name }}-->
-<!--{% endblock %}-->
-
 {% block content %}
+<div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+{% for product in products %}
+    <div class="alert alert-warning mt-2 " style="width: 900px; height: auto;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img  style='width: 500px; height: auto;' src="{{ product.image.url }}" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><a href="{% url 'detail' product.id %}">{{product.name}}</a></h5>
+        <p class="card-text">{{product.description|truncatechars:150 }}</p>
+        <p class="card-text"><small class="text-muted">{{product.price}} com.</small></p>
 
+          <a class="btn btn-info" href="{% url 'cart_add' product.id %}" role="'button">Add to card</a>
 
-    {% if products %}
-    {% for el in products %}
-<h1>{{ el.category}}</h1>
-            <div class="alert alert-warning mt-2 " display: flex;>
-                <div>
-                <h3>{{ el.name }}</h3>
-                      <div>
-                <img style="width: 500px; height: auto;" src="{{ el.image.url }}" class="img-thumbnail" alt="...">
-                      </div>
-                    <div>
-                <p >{{ el.description | truncatechars:80}}</p>
-                    </div>
-                <h6>{{ el.price }} com </h6>
-                <h6>{{ el.status }}</h6>
-                    <a class="btn btn-outline-dark" href="/cart/add/6/" role="'button">Add to card</a>
-
-
-                </div>
-<!--                <p>{{ el.image.url }}</p>-->
-
-<!--                <img src="{{ el.image.url }}" alt="">-->
-            </div>
-    {% endfor %}
-    {% else %}
-        <p>Нет записей</p>
-    {% endif %}
+      </div>
+    </div>
+  </div>
+</div>
+{%endfor%}
 
 
 <!--Pagination-->
