--- a/shop/templates/shop/update_product.html
+++ b/shop/templates/shop/update_product.html
@@ -6,7 +6,7 @@
 
   {{ product_form.as_p }}
   {% csrf_token %}
-  <button type="submit" class="btn btn-success">Update</button>
+  <button type="submit" class="btn btn-primary">Update</button>
 
 </form>
 
