--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}{% endblock %}</title>
+    <title>Sweetness</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -32,20 +32,38 @@
                     {% for category in categories %}
                   <li><a href="{% url 'list' category.slug %}" class="nav-link px-2 text-white">Product</a></li>
                     {% endfor %}
-                  <li><a href="{% url 'favorites' %}" class="nav-link px-2 text-white">Favorites</a></li>
+                  <li><a href="{% url 'cart_detail' %}" class="nav-link px-2 text-white">Cart</a></li>
                 </ul>
-    <!-- Start Search-->
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                  <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-                </form>
-    <!--the Seaech-->
+
+                   <a href="{% url 'cart_detail' %}"><img style="width:30px; height:auto " src="{% static 'img/carts.png' %}"></a>
+<!--   Permission to create -->
+    {% if request.user.is_authenticated and request.user.is_superuser  %}
+    <a href="{% url 'create-product' %}"><img style="width: 36px; height: auto;" src="{% static 'img/add.png' %}"></a>
+    {% endif %}
+<!--    End permission to create -->
+
+
+                  <!--   Search -->
+    <form class="d-flex" method="get" action="{% url 'search' %}">
+      <input name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+<!--    End Search-->
+
     <!--Start Login and Sing-up -->
+               {% if not request.user.is_authenticated  %}
                 <div class="text-end">
-                  <button type="button" class="btn btn-outline-light me-2">Login</button>
-                  <button type="button" class="btn btn-warning">Sign-up</button>
+                  <button type="button" class="btn btn-outline-light me-2"><a href="{% url 'login' %}">Login</a></button>
+                  <button type="button" class="btn btn-warning"> <a href="{% url 'register' %}">Sing Up</a></button>
+                {% else %}
+                    <h4>{{ request.user.username }}</h4>
+                    <button type="button" class="btn btn-outline-light me-2"><a href="{% url 'logout' %}">Logout</a></button>
+                {%endif%}
+
                 </div>
-              </div>
     <!--     the Login and Sing-up-->
+              </div>
+
             </div>
           </header>
     <div class="container">
