--- a/shop/templates/shop/delete_product.html
+++ b/shop/templates/shop/delete_product.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-<h1>Are you sure you want to delete this product?</h1>
+<h1>Вы хотите удалить?</h1>
 <form method="post" >
 
   {% csrf_token %}
-  <button type="submit" class="btn btn-danger">Yes</button>
-  <a class="btn btn-secondary" href="{% url 'detail' product.id %}" role="'button">No</a>
+  <button type="submit" class="btn btn-danger">Да</button>
+  <a class="btn btn-secondary" href="{% url 'detail' product.id %}" role="'button">Нет</a>
 
 </form>
 
